--- a/Text Mining - Sentiment Classification.ipynb
+++ b/Text Mining - Sentiment Classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Text Mining Brown Bag\n",
+    "## Text Mining\n",
     "\n",
     "### Introduction\n",
     "The **Large Movie Review Dataset** (http://ai.stanford.edu/~amaas/data/sentiment/) is used to train several sentiment classification models.  This training dataset consists of 25,000 labeled movie reviews (50/50 positive and negative) as well as 50,000 unlabeled reviews.  The test dataset consists of an additional 25,000 labeled reviews.\n",
